cif/org.eclipse.escet.cif.tests/tests/simulator/svgviz/svg_input_update.cif.err
ERROR: CIF simulator failed due to unsatisfied preconditions:

  --------------------------------------
  (1/1) SVG input mapping has an update.
  --------------------------------------
   * In the top-level scope of the specification:
     - svgin id "x1" do i := true;
                          ^
